--- a/index.html
+++ b/index.html
@@ -11,6 +11,19 @@
     <title></title>
   </head>
   <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="#">HNG Internship</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-item nav-link active" href="#">Intern Details <span class="sr-only">(current)</span></a>
+          <a class="nav-item nav-link" href="#">Add Intern</a>
+          <a class="nav-item nav-link" href="#">Send Airtime</a>
+        </div>
+      </div>
+    </nav>
 
 <div class="container-fluid">
     <div class="row">
@@ -22,7 +35,7 @@
               </div>
         </div>
         <div class="col-sm-6">
-    <h1 style="color: #084482;">Send Airtime Now</h1>
+        <h1 style="color: #084482;">Send Airtime Now</h1>
 
     <form>
         <div class="form-group">
