--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-item nav-link active" href="#">Intern Details <span class="sr-only">(current)</span></a>
+          <a class="nav-item nav-link" href="#">Intern Details <span class="sr-only">(current)</span></a>
           <a class="nav-item nav-link" href="#">Add Intern</a>
-          <a class="nav-item nav-link" href="#">Send Airtime</a>
+          <a class="nav-item nav-link active" href="#">Send Airtime</a>
         </div>
       </div>
     </nav>
@@ -28,13 +28,17 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-sm-6">
-            <div class="text-center">
-                <img src="..." class="rounded" alt="...">
-                <p  style="color: #ffffff;"class="font-weight-bold">Send Airtime</p>
-                <p style="color: #ffffff;" class="font-weight-bold">To An Intern</p>
+            <div class="card">
+              <img class="card-img-top" src="" alt="Intern">
+              <div class="card-img-overlay">
+                <p  class="card-text">Send Airtime</p>
+                <p  class="card-text">To An Intern</p>
+               <p class="card-text">The fast, simple way to send an airtime top-up service  and allows you  to send mobile credit  at any time, from anywhere in the world </p>
+              </div>
               </div>
         </div>
         <div class="col-sm-6">
+         
         <h1 style="color: #084482;">Send Airtime Now</h1>
 
     <form>
