--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 <div class="container-fluid">
     <div class="row">
-        <div class="col-sm-6">
+        <div class="col-sm-6 d-sm-none d-md-block">
             
               <img src="./image/intern1.jpg" class="img-fluid" alt="Intern">
             
